--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "@types/chroma-js": "^2.1.3",
+    "chroma-js": "^2.4.2",
     "solid-js": "^1.4.2"
   }
 }
