--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "sass": "^1.52.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-solid": "^2.2.6"
@@ -17,6 +18,7 @@
   "dependencies": {
     "@types/chroma-js": "^2.1.3",
     "chroma-js": "^2.4.2",
-    "solid-js": "^1.4.2"
+    "solid-js": "^1.4.2",
+    "solid-styled-components": "^0.28.1"
   }
 }
