--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@types/chroma-js": "^2.1.3",
+    "@types/lodash": "^4.14.182",
     "chroma-js": "^2.4.2",
+    "lodash": "^4.17.21",
     "solid-js": "^1.4.2",
     "solid-styled-components": "^0.28.1"
   }
