--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/chroma-js": "^2.1.3",
     "@types/lodash": "^4.14.182",
+    "bootstrap-icons": "^1.8.3",
     "chroma-js": "^2.4.2",
     "lodash": "^4.17.21",
     "solid-js": "^1.4.2",
