--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "@felte/solid": "^1.2.2",
     "@types/chroma-js": "^2.1.3",
     "@types/lodash": "^4.14.182",
     "bootstrap-icons": "^1.8.3",
