--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@solidjs/router": "^0.5.1",
     "@types/chroma-js": "^2.1.4",
+    "bootstrap-icons": "^1.10.2",
     "chroma-js": "^2.4.2",
     "lodash": "^4.17.21",
     "solid-js": "^1.6.4",
