--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0"
+    "vite-plugin-solid": "^2.3.0",
+    "vite-plugin-solid-styled": "^0.7.4"
   },
   "dependencies": {
     "@solidjs/router": "^0.5.1",
@@ -26,6 +27,7 @@
     "chroma-js": "^2.4.2",
     "lodash": "^4.17.21",
     "solid-js": "^1.6.4",
+    "solid-styled": "^0.7.4",
     "solid-toast": "^0.3.5"
   }
 }
