--- a/package.json
+++ b/package.json
@@ -1,34 +1,57 @@
 {
-  "name": "ambient",
-  "version": "1.0.0",
-  "description": "Color Checker Tool",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite --debug",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.8",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "sass": "^1.56.2",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0",
-    "vite-plugin-solid-styled": "^0.7.4"
-  },
-  "dependencies": {
-    "@felte/solid": "^1.2.7",
-    "@solidjs/router": "^0.5.1",
-    "@types/chroma-js": "^2.1.4",
-    "bootstrap-icons": "^1.10.2",
-    "chroma-js": "^2.4.2",
-    "lodash": "^4.17.21",
-    "solid-js": "^1.6.4",
-    "solid-styled": "^0.7.4",
-    "solid-toast": "^0.3.5"
-  }
+	"name": "ambient",
+	"version": "1.0.0",
+	"type": "module",
+	"description": "Color Checker Tool",
+	"author": "Kevin Taeyoon Jin <hello@kevintyj.com>",
+	"license": "BSD-3-Clause",
+	"homepage": "https://github.com/kevintyj/ambient#readme",
+	"repository": "github:kevintyj/ambient",
+	"bugs": {
+		"url": "https://github.com/kevintyj/ambient/issues"
+	},
+	"keywords": [
+		"ui",
+		"ambient",
+		"accessibility"
+	],
+	"scripts": {
+		"prepare": "husky install",
+		"start": "vite",
+		"dev": "vite --debug",
+		"build": "vite build",
+		"serve": "vite preview",
+		"lint:es": "eslint .",
+		"ci": "pnpm run lint:es && pnpm run build"
+	},
+	"devDependencies": {
+		"@antfu/eslint-config": "^2.1.2",
+		"@commitlint/cli": "^18.4.3",
+		"@commitlint/config-conventional": "^18.4.3",
+		"@tailwindcss/typography": "^0.5.10",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.54.0",
+		"husky": "^8.0.3",
+		"postcss": "^8.4.31",
+		"sass": "^1.69.5",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.3.2",
+		"vite": "^5.0.4",
+		"vite-plugin-solid": "^2.7.2",
+		"vite-plugin-solid-styled": "^0.10.0"
+	},
+	"dependencies": {
+		"@felte/solid": "^1.2.11",
+		"@solidjs/router": "^0.9.1",
+		"@types/chroma-js": "^2.4.3",
+		"bootstrap-icons": "^1.11.2",
+		"chroma-js": "^2.4.2",
+		"lodash": "^4.17.21",
+		"solid-js": "^1.8.6",
+		"solid-styled": "^0.10.0",
+		"solid-toast": "^0.5.0"
+	},
+	"lint-staged": {
+		"*": "eslint --fix"
+	}
 }
