--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           pnpm commitlint --version
 
       - name: 📝Validate PR commits with commitlint
-        if: ${{ github.event_name !== 'push' }}
+        if: ${{ github.event_name != 'push' }}
         run: pnpm commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
       - name: 🤞Run CI command
