--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.54.0",
 		"husky": "^8.0.3",
+		"lint-staged": "^15.1.0",
 		"postcss": "^8.4.31",
 		"sass": "^1.69.5",
 		"tailwindcss": "^3.3.5",
