feat!: Replace crimson with pink colorset
Adds true Crimson color to the colorset, renaming crimson to Pink.

BREAKING!: Changes behavior of crimson colors of previous builds,
Crimson renamed to Pink in this version.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-# dist
-.solid
-.output
-.vercel
-.netlify
-netlify
+# commited dist files
+!dist
+lib
 
 # dependencies
-/node_modules
+node_modules
 
 # IDEs and editors
 /.idea
@@ -21,3 +18,6 @@ gitignore
 # System Files
 .DS_Store
 Thumbs.db
+
+# Test files
+coverage
